# usbetlan

./: Makefile  README.md  app.py  main.py  pyproject.toml  test_app_cicd.py
.github/workflows/: backtesting.yml  cicd.yml  generate_data.yml  main.yml  portfolio_update.yml
archive/: portfolio.dump  portfolio.sql
data/: BNP_IPS_TTE_2024_12_07  BNP_IPS_TTE_STMPA_2024_11_14  BNP_IPS_TTE_STMPA_2024_11_15  BNP_IPS_TTE_STMPA_2024_11_20  BNP_IPS_TTE_STMPA_2024_11_21  BNP_IPS_TTE_STMPA_2024_11_23  BNP_IPS_TTE_STMPA_2024_11_24  BNP_IPS_TTE_STMPA_2024_12_03  BNP_IPS_TTE_STMPA_2024_12_06  BNP_IPS_TTE_STMPA_2024_12_07  BNP_IPS_TTE_STMPA_2024_12_09  BNP_IPS_TTE_STMPA_2024_12_10  BNP_IPS_TTE_STMPA_2024_12_11  BNP_IPS_TTE_STMPA_2024_12_12
reports/: usbetlan.pbix
src/: app.py  backend.py  backtesting.py  connect_db.py  data_preprocessing.py  debug.py  generate_data.py  update_edgar_portfolio.py  update_landry_portfolio.py  update_portfolio.py  utils.py
tests/: connect_db.py  env_var.py  test_fetch_data.py  test_fetch_price_data.py  update_portfolio.py
