[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["edgarkp <edgar.kouajiep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yfinance = "^0.2.49"
pandas = "^2.2.3"
numpy = "^2.1.3"
pytest = "^8.3.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.36"
psycopg = { version = "^3.1.8", extras = ["c"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
